--- a/HHIS_Frontend/HHISIT2018144/src/index.html
+++ b/HHIS_Frontend/HHISIT2018144/src/index.html
@@ -22,9 +22,10 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css">
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"></script>
-
+<script src="https://smtpjs.com/v3/smtp.js">
+</script>
 </head>
-<body>
+<body class="mat-typography">
   <app-root></app-root>
 
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
